Commit changes.txt for new version

--- a/changes.txt
+++ b/changes.txt
@@ -1,4 +1,11 @@
 ==========================================
+ Maven-test-1.1.17
+==========================================
+ [10:01:2013]
+
+ [*] - fix pom tag
+
+==========================================
  Maven-test-1.1.16
 ==========================================
  [10:01:2013]
