--- a/changes.txt
+++ b/changes.txt
@@ -1,4 +1,12 @@
 ==========================================
+ Maven-test-1.1.18
+==========================================
+ [11:01:2013]
+
+ [!] - new mail server
+
+
+==========================================
  Maven-test-1.1.17
 ==========================================
  [10:01:2013]
