Commit changes.txt for new version

--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,13 @@
 ==========================================
  Maven-test-1.1.18
 ==========================================
+[11.01.2013] - Sergei.Ionin
+ 
+ [*] - fx it!
+
+==========================================
+ Maven-test-1.1.18
+==========================================
  [11:01:2013]
 
  [!] - new mail server
