--- a/changes.txt
+++ b/changes.txt
@@ -2,28 +2,20 @@
  Maven-test-1.1.18
 ==========================================
 [11.01.2013] - Sergei.Ionin
- 
- [*] - fx it!
-
-==========================================
- Maven-test-1.1.18
-==========================================
- [11:01:2013]
 
  [!] - new mail server
-
 
 ==========================================
  Maven-test-1.1.17
 ==========================================
- [10:01:2013]
+[10.01.2013] - Sergei.Ionin
 
  [*] - fix pom tag
 
 ==========================================
  Maven-test-1.1.16
 ==========================================
- [10:01:2013]
+[10.01.2013] - Sergei.Ionin
 
  [!] - release with new release-changes-plugin
 
