Commit changes.txt for new version

--- a/changes.txt
+++ b/changes.txt
@@ -1,4 +1,11 @@
 ==========================================
+ Maven-test-1.1.19
+==========================================
+[14.01.2013] - Sergei.Ionin
+
+ [!] - new version of release plugin, jira support added
+
+==========================================
  Maven-test-1.1.18
 ==========================================
 [11.01.2013] - Sergei.Ionin
@@ -11,12 +18,4 @@
 [10.01.2013] - Sergei.Ionin
 
  [*] - fix pom tag
-
-==========================================
- Maven-test-1.1.16
-==========================================
-[10.01.2013] - Sergei.Ionin
-
- [!] - release with new release-changes-plugin
-
 
