--- a/changes.txt
+++ b/changes.txt
@@ -1,4 +1,11 @@
 ==========================================
+ Maven-test-1.1.19-bugfix
+==========================================
+[14.01.2013] - Sergei.Ionin
+
+ [!] - fixed
+
+==========================================
  Maven-test-1.1.19
 ==========================================
 [14.01.2013] - Sergei.Ionin
